--- a/Properties/Resources.resx
+++ b/Properties/Resources.resx
@@ -118,13 +118,16 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
-  <data name="pfeile-aktualisieren" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\pfeile-aktualisieren.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
   <data name="arrow-24-128" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\arrow-24-128.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="pfeile-aktualisieren" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\pfeile-aktualisieren.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="ToolScope Banner" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\ToolScope Banner.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="power-off-solid" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\power-off-solid.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
